--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">한우이력정보</string>
     <string name="action_settings">Settings</string>
+    <string name="pref_key_auto_sign_in">auto_sign_in</string>
+    <string name="pref_key_save_username">save_username</string>
+    <string name="pref_key_save_password">save_password</string>
+    <string name="pref_key_username">username</string>
+    <string name="pref_key_password">password</string>
 </resources>
