--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="pref_key_save_password">save_password</string>
     <string name="pref_key_username">username</string>
     <string name="pref_key_password">password</string>
+    <string name="title_activity_cow_detail">CowDetailActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
